feat: add support for notifications endpoint
